cooddy/tests/suite/analyzerToolTest/parseErrors/boo.cpp

void boo()
{
    int* p = foo(bbb);  // error here
    return *p;
}
